# fastapi_base

./: .pylintrc  docker-compose.yaml  entrypoint.sh  pyproject.toml  pytest.ini
src/: main.py
src/alembic/versions/: 2024_11_06_2009-8b3975846f89_init_migrationi.py  2024_11_06_2009-ffca62791e82_init_migrationi.py
src/api/: __init__.py
src/api/api_v1/: __init__.py  example.py  users.py
src/api/api_v1/crud/: example.py  users.py
src/core/: config.py
src/core/models/: __init__.py  base.py  db_helper.py  example.py  user.py
src/core/models/mixins/: int_id_pk.py
src/core/schemas/: example.py  user.py
src/utils/: __init__.py
