[tool.pyright]
reportIncompatibleMethodOverride = false
reportIncompatibleVariableOverride = false

[tool.mypy]
plugins = ["mypy_django_plugin.main", "mypy_drf_plugin.main"]

[tool.django-stubs]
django_settings_module = "<project_name>.settings"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"

[tool.poetry]
name = "project-name"
version = "0.1.0"
description = ""
authors = ["Roman Ivanov <sitdoff@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["all"], version = "^0.115.4"}
uvicorn = {extras = ["standart"], version = "^0.32.0"}
pydantic = {extras = ["email"], version = "^2.9.2"}
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"
sqlalchemy = "^2.0.36"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
